--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <meta property="og:description" content="Sravan Kollapudi's Profile" />
     <meta property="og:type" content="website" />
 
+    <!-- Google Analytics (GA4) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNFQV5CCCB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-PNFQV5CCCB');
+    </script>
+
   </head>
 
   <body>
